# minesweeper

./: .clang-format  CMakeLists.txt
.github/workflows/: cmake.yml
include/: block.h  board.h  client.h  host.h  menu.h  menu.hpp  network.h  sfml.h  sfml.hpp
script/: start_executable.sh  sync_executable.sh  sync_img.sh  test_multi.sh
src/: board.cpp  client.cpp  host.cpp  main.cpp  menu.cpp  network.cpp  sfml.cpp
